# sunset

./: .clang-format  .gitignore  .gitmodules  arrow4.py  bindings.py  daboor  meson.build  meson_options.txt  shader.frag  todo.txt
include/sunset/: _log.h  anim.h  animation.h  backend.h  base64.h  bitmap.h  bitmask.h  byte_stream.h  camera.h  color.h  commands.h  config.h  crc32.h  crc64.h  crypto.h  ecs.h  ecs_types.h  engine.h  errors.h  events.h  filesystem.h  fonts.h  geometry.h  gfx.h  glb.h  gltf.h  images.h  input.h  io.h  json.h  map.h  math.h  mtl_file.h  obj_file.h  octree.h  opengl_backend.h  physics.h  quadtree.h  render.h  ring_buffer.h  (+9 more)
include/sunset/internal/: btree.h  math.h  mem_utils.h  time_utils.h  utils.h
mods/: thing.c
src/: Makefile.am  anim.c  audio.c  backend.c  base64.c  bitmap.c  bitmask.c  btree.c  byte_stream.c  camera.c  color.c  commands.c  crc32.c  crc64.c  ecs.c  engine.c  errors.c  events.c  filesystem.c  fonts.c  geometry.c  gfx.c  glb.c  gltf.c  images.c  input.c  io.c  json.c  json_test.c  log.c  main.c  map.c  mtl_file.c  mtl_test.c  network5.c  obj_file.c  obj_test.c  octree.c  opengl_backend.c  opengl_backend2.c  (+15 more)
tools/: clang-format.sh  clang-tidy.sh
world-builder/: plugin.c
